# book_writer

./: .env.example  .gitignore  CLAUDE.md  README.md  llm_defaults.json  main.py  pyproject.toml
books/example_book/: book.yaml  outline.yaml
books/test_book/: book.yaml  outline.yaml
books/the_last_ember/: book.yaml  outline.yaml
books/the_long_watch/: book.yaml  outline.yaml
chains/: chapter_writer.py  critique.py
models/: book_config.py  config.py  critique.py  outline.py
templates/: childrens.yaml  factual.yaml  fantasy.yaml  novel.yaml  scifi.yaml
utils/: config_loader.py  differ.py  file_handler.py  llm_defaults.py  outline_cleaner.py  pdf_exporter.py  universes.py  versioning.py  writing_styles.py
